<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firstLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:background="@color/purple_700">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PLAYER 1"
        android:textColor="@color/purple_200"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:maxLines="1"
        tools:text="Ingrese jugador 1"
        android:textColor="@color/purple_700"
        android:background="@color/purple_200"
        android:textSize="20sp"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
    />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PLAYER 1"
        android:textColor="@color/purple_200"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/editText1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:maxLines="1"
        tools:text="Ingrese jugador 2"
        android:textColor="@color/purple_700"
        android:background="@color/purple_200"
        android:textSize="20sp"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        />



    <Button
        android:id="@+id/btnComparar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PLAY"
        android:textSize="15dp"
        android:background="@color/purple_200"
        android:textColor="@color/purple_700"
        android:padding="5sp"
        app:layout_constraintTop_toBottomOf="@id/editText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:background="@color/purple_500"
        android:gravity="center"
        tools:text="RESULTADO"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/btnComparar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp" />


</androidx.constraintlayout.widget.ConstraintLayout>